# fractal_image

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: check.yml
src/: main.cpp
src/dummy/: dummy.cpp  dummy.h
tests/: CMakeLists.txt  build_run_test.sh  main_test.cpp
tests/unit/: main_test.cpp
tool-configs/clang-format/: .clang-format
